--- a/WebApp.Site/src/app/pages/login/login.component.html
+++ b/WebApp.Site/src/app/pages/login/login.component.html
@@ -1,8 +1,44 @@
-<div>
-  <h2>Login</h2>
-  <form (submit)="onLoginSubmit()">
-    <input type="text" placeholder="Nome de Usuário" [(ngModel)]="username" name="username">
-    <input type="password" placeholder="Senha" [(ngModel)]="password" name="password">
-    <button pButton (onClick)="onLoginSubmit()">Entrar</button>
-  </form>
+<div
+  class="h-screen w-full bg-blue-100 flex align-items-center justify-content-center"
+>
+  <p-card header="Money Control App" styleClass="w-20rem h-25rem">
+    <form [formGroup]="loginForm" class="flex grid formgrid p-fluid h-20rem">
+      <!-- inputs -->
+      <div class="col-12 mt-3">
+        <span class="p-float-label">
+          <input pInputText pInputText formControlName="email" />
+          <label htmlFor="email">Email</label>
+        </span>
+
+        <span class="p-float-label mt-4">
+          <input pInputText pInputText formControlName="password" type="password" />
+          <label htmlFor="password">Senha</label>
+        </span>
+      </div>
+
+      <!-- msg erro -->
+      <span class="h-2rem col-12 font-semibold ml-1 text-red-500 text-xs">
+        <p *ngIf="msgError" class=""></p>
+        {{ msgError }}
+      </span>
+
+      <div class="col-12">
+        <div>
+          <p-button
+            styleClass="p-button-rounded"
+            label="Entrar"
+            (onClick)="onLoginSubmit()"
+            [disabled]="!loginForm.valid"
+          ></p-button>
+        </div>
+        <div class="mt-3">
+          <p-button
+            label="Cadastrar"
+            styleClass="p-button-text p-button-rounded"
+            (onClick)="register()"
+          ></p-button>
+        </div>
+      </div>
+    </form>
+  </p-card>
 </div>
