--- a/WebApp.Site/src/styles.css
+++ b/WebApp.Site/src/styles.css
@@ -1,2 +1,9 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "/node_modules/primeflex/primeflex.css";
+@import "/node_modules/primeicons/primeicons.css";
+
+.font-style {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
+}
