--- a/WebApp.Site/src/app/app.component.css
+++ b/WebApp.Site/src/app/app.component.css
@@ -1,2 +1,7 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+
+
+body {
+  margin: 0 !important;
+}
