create user service

--- a/WebApp.Site/src/app/feature-components/menu/menu.component.html
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.html
@@ -7,6 +7,6 @@
     />
   </ng-template>
   <ng-template pTemplate="end">
-    <input type="text" pInputText placeholder="Search" class="w-full" />
+    <p>Hello, {{ currentUser?.name }}!</p>
   </ng-template>
 </p-menubar>
