--- a/WebApp.Site/src/app/pages/login/login.component.html
+++ b/WebApp.Site/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="h-screen w-full bg-blue-100 flex align-items-center justify-content-center"
+  class="h-screen w-full background-page flex align-items-center justify-content-center"
 >
   <p-card styleClass="w-20rem h-25rem">
     <div class="flex flex-row justify-content-center mb-5">
