--- a/WebApp.Site/src/styles.css
+++ b/WebApp.Site/src/styles.css
@@ -7,3 +7,16 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+* {
+  margin: 0;
+}
+
+.background-page {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-image: url('https://primefaces.org/cdn/primeng/images/dock/window.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
