update management mock values

--- a/WebApp.Site/src/app/feature-components/menu/menu.component.html
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.html
@@ -11,7 +11,7 @@
 <div
   class="dock-window dock-advanced flex align-items-center justify-content-center"
 >
-  <p-card styleClass="m-5">
+  <p-card styleClass="m-5 w-full">
     <router-outlet></router-outlet>
   </p-card>
 
