--- a/WebApp.Site/src/app/pages/management/management.component.html
+++ b/WebApp.Site/src/app/pages/management/management.component.html
@@ -1,1 +1,3 @@
-<app-analytics-values [cards]="cards"></app-analytics-values>
+<div>
+  <app-analytics-values [cards]="cards"></app-analytics-values>
+</div>
