--- a/WebApp.Site/src/app/pages/management/management.component.html
+++ b/WebApp.Site/src/app/pages/management/management.component.html
@@ -1,3 +1,5 @@
 <div>
   <app-analytics-values [cards]="cards"></app-analytics-values>
+
+  <app-table-spent [products]="products" [columns]="columns"></app-table-spent>
 </div>
