adjusting logged in user rule / adjusting type of  field "cellphone"

--- a/WebApp.Site/src/app/pages/register/register.component.html
+++ b/WebApp.Site/src/app/pages/register/register.component.html
@@ -27,7 +27,7 @@
       </span>
 
       <span class="p-float-label">
-        <input pInputText formControlName="cellphone" class="w-full" />
+        <input pInputText formControlName="cellphone" class="w-full" type="number">
         <label htmlFor="cellphone">Cellphone</label>
       </span>
 
