--- a/WebApp.Site/src/app/pages/management/management.component.html
+++ b/WebApp.Site/src/app/pages/management/management.component.html
@@ -1,5 +1,4 @@
 <div>
   <app-analytics-values [cards]="cards"></app-analytics-values>
-
-  <app-table-spent [products]="products" [columns]="columns"></app-table-spent>
+  <app-table-spent [expenses]="expenses" [columns]="columns"></app-table-spent>
 </div>
