--- a/WebApp.Site/src/app/feature-components/analytics-values/analytics-values.component.html
+++ b/WebApp.Site/src/app/feature-components/analytics-values/analytics-values.component.html
@@ -1,4 +1,4 @@
-<div class="surface-ground px-4 py-5 md:px-6 lg:px-8">
+<div class="surface-ground px-4">
   <div class="grid">
     <div class="col-12 md:col-6 lg:col-3" *ngFor="let card of cards">
       <div class="surface-card shadow-2 p-3 border-round">
