--- a/WebApp.Site/src/app/feature-components/menu/menu.component.css
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.css
@@ -4,70 +4,78 @@
 
 :host ::ng-deep {
   .dock-window {
-      width: 100%;
-      position: relative;
-      background-image: url('https://primefaces.org/cdn/primeng/images/dock/window.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
+    width: 100%;
+    position: relative;
+    background-image: url("https://primefaces.org/cdn/primeng/images/dock/window.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
   }
 
   .p-dock {
-      z-index: 1000;
+    z-index: 1000;
   }
 
   .dock-advanced {
-      .p-dialog-mask,
-      .p-toast {
-          position: absolute;
+    .p-dialog-mask,
+    .p-toast {
+      position: absolute;
+    }
+
+    .p-dialog {
+      .p-dialog-header {
+        padding: 0.2rem;
       }
 
-      .p-dialog {
-          .p-dialog-header {
-              padding: .2rem;
-          }
-
-          .p-dialog-content {
-              padding: 0;
-          }
-
-          p {
-              margin-top: 0;
-          }
-
-          .p-terminal {
-              background-color: #212121;
-              color: #ffffff;
-              border: 0 none;
-              min-height: 18rem;
-              height: 100%;
-
-              .p-terminal-command {
-                  color: #80CBC4;
-              }
-
-              .p-terminal-prompt {
-                  color: #FFD54F;
-              }
-
-              .p-terminal-response {
-                  color: #9FA8DA;
-              }
-          }
-
-          .p-tree {
-              height: 100%;
-              border-radius: 0;
-              border-left-width: 0;
-              border-right-width: 0;
-              border-bottom-width: 0;
-          }
+      .p-dialog-content {
+        padding: 0;
       }
 
-      .p-toast {
-          top: 20px;
+      p {
+        margin-top: 0;
       }
+
+      .p-terminal {
+        background-color: #212121;
+        color: #ffffff;
+        border: 0 none;
+        min-height: 18rem;
+        height: 100%;
+
+        .p-terminal-command {
+          color: #80cbc4;
+        }
+
+        .p-terminal-prompt {
+          color: #ffd54f;
+        }
+
+        .p-terminal-response {
+          color: #9fa8da;
+        }
+      }
+
+      .p-tree {
+        height: 100%;
+        border-radius: 0;
+        border-left-width: 0;
+        border-right-width: 0;
+        border-bottom-width: 0;
+      }
+    }
+
+    .p-toast {
+      top: 20px;
+    }
   }
+}
 
+.card-container {
+  position: relative;
+  top: 120px;
 }
 
 /* .dark-tooltip {
