change user and expense model [ database, api ]

--- a/WebApp.Site/src/app/pages/management/management.component.html
+++ b/WebApp.Site/src/app/pages/management/management.component.html
@@ -14,8 +14,12 @@
   ></app-table-spent>
 </div>
 
-
-<p-dialog header="Header" [(visible)]="visible" [style]="{ width: '50vw' }" [modal]="true">
+<p-dialog
+  header="Header"
+  [(visible)]="visible"
+  [style]="{ width: '50vw' }"
+  [draggable]="false"
+>
   <ng-template pTemplate="header">
     <span class="text-xl font-bold">Header Content</span>
   </ng-template>
