--- a/WebApp.Site/src/app/feature-components/expense-form-register/expense-form-register.component.html
+++ b/WebApp.Site/src/app/feature-components/expense-form-register/expense-form-register.component.html
@@ -1,1 +1,19 @@
-<p>expense-form-register works!</p>
+<div [formGroup]="expenseForm" class="flex flex-column gap-4 h-20rem">
+  <span class="p-float-label">
+    <input pInputText formControlName="name" class="w-full" />
+    <label htmlFor="name">Name</label>
+  </span>
+
+  <span class="p-float-label">
+    <input pInputText formControlName="price" class="w-full" type="number">
+    <label htmlFor="price">Price</label>
+  </span>
+
+</div>
+
+<!-- name: [null, [Validators.required]],
+email: [null, [Validators.required]],
+price: [null, [Validators.required]],
+expenseType: [new Date(), [Validators.required]],
+includedDate: [new Date(), [Validators.required]],
+cellphone: [null, []] -->
