--- a/WebApp.Site/src/app/feature-components/expense-form-register/expense-form-register.component.html
+++ b/WebApp.Site/src/app/feature-components/expense-form-register/expense-form-register.component.html
@@ -4,21 +4,45 @@
     <label htmlFor="description">Description</label>
   </span>
 
-  <!-- <p-dropdown
+  <p-dropdown
     formControlName="expenseType"
-    [options]="cities"
+    [options]="expenseTypes"
     optionLabel="name"
-  ></p-dropdown> -->
+    optionValue="id"
+    styleClass="w-full"
+    placeholder="Expense Type"
+  ></p-dropdown>
 
-  <span class="p-float-label">
+  <span class="p-float-label w-full">
     <input pInputText formControlName="price" class="w-full" type="number" />
     <label htmlFor="price">Price</label>
   </span>
-</div>
 
-<!-- name: [null, [Validators.required]],
-email: [null, [Validators.required]],
-price: [null, [Validators.required]],
-expenseType: [new Date(), [Validators.required]],
-includedDate: [new Date(), [Validators.required]],
-cellphone: [null, []] -->
+  <p-calendar
+    formControlName="expenseDate"
+    placeholder="Expense Date"
+    dateFormat="dd/mm/yy"
+    styleClass="w-full"
+  ></p-calendar>
+
+  <div class="w-full" *ngIf="typeAction == 'register'">
+    <p-button
+      label="register"
+      styleClass="p-button-text p-button-rounded"
+      (onClick)="emitExpense(false)"
+    ></p-button>
+    <p-button
+      label="register and register another"
+      styleClass="p-button-text p-button-rounded"
+      (onClick)="emitExpense(true)"
+    ></p-button>
+  </div>
+
+  <div *ngIf="typeAction == 'edit'">
+    <p-button
+      label="save"
+      styleClass="p-button-text p-button-rounded"
+      (onClick)="emitEditedExpense()"
+    ></p-button>
+  </div>
+</div>
