--- a/WebApp.Site/src/app/pages/management/management.component.html
+++ b/WebApp.Site/src/app/pages/management/management.component.html
@@ -23,20 +23,12 @@
   <ng-template pTemplate="header">
     <span class="text-xl font-bold">Header Content</span>
   </ng-template>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
-  <ng-template pTemplate="footer">
-    <p-button
-      icon="pi pi-check"
-      (click)="visible = false"
-      label="Ok"
-      styleClass="p-button-text"
-    ></p-button>
-  </ng-template>
+
+  <app-expense-form-register
+    (expenseEmit)="registerExpense($event)"
+    (expenseEdit)="updateExpense($event)"
+    [expenseToEdit]="expenseSelected"
+  ></app-expense-form-register>
 </p-dialog>
+
+<p-toast></p-toast>
