fixed bug in update expense

--- a/WebApp.Site/src/app/pages/management/management.component.html
+++ b/WebApp.Site/src/app/pages/management/management.component.html
@@ -28,6 +28,7 @@
     (expenseEmit)="registerExpense($event)"
     (expenseEdit)="updateExpense($event)"
     [expenseToEdit]="expenseSelected"
+    [typeAction]="typeAction"
   ></app-expense-form-register>
 </p-dialog>
 
