--- a/WebApp.Site/src/app/pages/management/management.component.html
+++ b/WebApp.Site/src/app/pages/management/management.component.html
@@ -11,13 +11,23 @@
         <i class="pi pi-list mr-2"></i>
         <span>All</span>
       </ng-template>
+
+      <app-table
+        class="col-12"
+        [values]="registries"
+        [columns]="columns"
+        [actions]="actions"
+        (valueSelected)="receiveRegistrySelected($event)"
+        (addValue)="addRegistry()"
+      ></app-table>
+
     </p-tabPanel>
     <p-tabPanel [headerStyle]="{ width: '33%' }">
       <ng-template pTemplate="header">
         <i class="pi pi-arrow-down-left text-red-500 mr-2"></i>
         <span>Expenses</span>
       </ng-template>
-
+<!--
       <app-table
         class="col-12"
         [values]="expenses"
@@ -25,7 +35,7 @@
         [actions]="actions"
         (valueSelected)="receiveExpenseSelected($event)"
         (addValue)="addExpense()"
-      ></app-table>
+      ></app-table> -->
     </p-tabPanel>
     <p-tabPanel [headerStyle]="{ width: '33%' }">
       <ng-template pTemplate="header">
@@ -33,6 +43,15 @@
         <span>Incomes</span>
       </ng-template>
       <!-- conteudo -->
+
+      <!-- <app-table
+        class="col-12"
+        [values]="incomes"
+        [columns]="columns"
+        [actions]="incomesActions"
+        (valueSelected)="receiveExpenseSelected($event)"
+        (addValue)="addIncome()"
+      ></app-table> -->
     </p-tabPanel>
   </p-tabView>
 </div>
@@ -47,12 +66,14 @@
     <span class="text-xl font-bold">Header Content</span>
   </ng-template>
 
-  <app-expense-form-register
-    (expenseEmit)="registerExpense($event)"
-    (expenseEdit)="updateExpense($event)"
-    [expenseToEdit]="expenseSelected"
+  <app-registry-form
+    (registryEmit)="createRegistry($event)"
+    (registryEdit)="updateRegistry($event)"
+    [registryToEdit]="rowSelected"
     [typeAction]="typeAction"
-  ></app-expense-form-register>
+    [user]="user"
+  ></app-registry-form>
+
 </p-dialog>
 
 <p-toast></p-toast>
