--- a/WebApp.Site/src/app/feature-components/registry-form/registry-form.component.html
+++ b/WebApp.Site/src/app/feature-components/registry-form/registry-form.component.html
@@ -19,8 +19,8 @@
   </span>
 
   <p-calendar
-    formControlName="expenseDate"
-    placeholder="Expense Date"
+    formControlName="date"
+    placeholder="date"
     dateFormat="dd/mm/yy"
     styleClass="w-full"
   ></p-calendar>
