--- a/WebApp.Site/src/app/feature-components/analytics-values/analytics-values.component.html
+++ b/WebApp.Site/src/app/feature-components/analytics-values/analytics-values.component.html
@@ -5,7 +5,7 @@
         <div class="flex justify-content-between mb-3">
           <div>
             <span class="block text-500 font-medium mb-3">{{ card.title }}</span>
-            <div class="text-900 font-medium text-xl">{{ card.value }}</div>
+            <div class="text-900 font-medium text-xl {{card.textColor}}">{{ card.value }}</div>
           </div>
           <div
             class="flex align-items-center justify-content-center {{ card.bgColor }} border-round"
